2010-05-21  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-runtime.c (_dl_profile_fixup): Don't crash on unresolved weak
	symbol reference.

2010-05-19  Andreas Schwab  <schwab@redhat.com>

	* elf/dl-runtime.c (_dl_fixup): Don't crash on unresolved weak
	symbol reference.

2010-05-21  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/Makefile (sysdep_routines): Add recvmmsg
	and internal_recvmmsg.
	* sysdeps/unix/sysv/linux/recvmmsg.c: New file.
	* sysdeps/unix/sysv/linux/internal_recvmmsg.S: New file.
	* sysdeps/unix/sysv/linux/socketcall.h (SOCKOP_recvmmsg): Define.
	* sysdeps/unix/sysv/linux/syscalls.list (recvmmsg): Remove.

	* sunrpc/clnt_tcp.c (clnttcp_control): Add missing break.
	* sunrpc/clnt_udp.c (clntudp_control): Likewise.
	* sunrpc/clnt_unix.c (clntunix_control): Likewise.

2010-05-20  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/sys/timex.h: Use __REDIRECT_NTH.

2010-05-17  Luis Machado  <luisgpm@br.ibm.com>

	POWER7 optimizations.
	* sysdeps/powerpc/powerpc64/power7/memset.S: New file.
	* sysdeps/powerpc/powerpc32/power7/memset.S: New file.

2010-05-19  Ulrich Drepper  <drepper@redhat.com>

	* version.h: Update for 2.13 development version.

2010-05-12  Andrew Stubbs  <ams@codesourcery.com>

	* sysdeps/sh/sh4/fpu/feholdexcpt.c (feholdexcept): Really disable all
	exceptions.  Return 0.

2010-05-07  Roland McGrath  <roland@redhat.com>

	* elf/ldconfig.c (main): Add a const.

2010-05-06  Ulrich Drepper  <drepper@redhat.com>

	* nss/getent.c (idn_flags): Default to AI_IDN|AI_CANONIDN.
	(args_options): Add no-idn option.
	(ahosts_keys_int): Add idn_flags to ai_flags.
	(parse_option): Handle 'i' option to clear idn_flags.

	* malloc/malloc.c (_int_free): Possible race in the most recently
	added check.  Only act on the data if no current modification
	happened.

See ChangeLog.17 for earlier changes.